--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest -i"
-        "start": "node server.js",
+        "test": "jest -i",
+        "start": "node server.js"
     },
     "author": "",
     "license": "ISC",
